--- a/front-end/src/containers/Settings/EditProfile/styles.scss
+++ b/front-end/src/containers/Settings/EditProfile/styles.scss
@@ -1,136 +1,31 @@
 @import "../../../styles/variables/variables";
 
 .div-edit-profile-container {
-  background-color: white;
-  border: 1px solid #D2D2D2;
-  padding: 50px 50px 0 50px;
-  color: $text-light-gray;
-
-  .div-form-header {
-    margin: -50px -50px 0 -50px;
-    height: 135px;
-    line-height: 135px;
-    border-bottom: 1px solid $light-green-primary;
-    background: $extra-light-green;
-    font-size: 41px;
-    font-family: 'Montserrat-Medium';
-    text-align: center;
-  }
-
-  .form-inputs {
-    .form-input {
-      margin-top: 30px;
-
-      input {
-        width: 100%;
-        height: 80px;
-        margin-top: 10px;
-        padding: 0 20px;
-        border: 1px solid $light-green-primary;
-        border-radius: 4px;
-        font-size: $footer-secondary-font-size;
-        caret-color: $green-primary;
-      }
-
-      input:focus {
-        border: 1px solid $green-primary;
-      }
-    }
-
-    .form-double-inputs {
-      display: flex;
-
-      #input_firstname {
-        margin-right: 15px;
-        width: 50%;
-      }
-      #input_lastname {
-        margin-left: 15px;
-        width: 50%;
-      }
-    }
-
-    .form-checkbox {
-      margin: 50px 0;
-
-      .checkbox {
-        span {
-          color: $text-light-gray;
-        }
-      }
-    }
-
-    .div-buttons {
-      padding: 80px 0;
-      display: flex;
-      justify-content: center;
-
-      .button {
-        width: 165px;
-        height: 81px;
-      }
-      
-      .btn-cancel {
-        background-color: $text-light-gray;
-        opacity: 0.87;
-        border: unset;
-        margin-right: 15px;
-      }
-
-      .btn-save {
-        margin-left: 15px;
-      }
-    }
-  }
-
-  .form-separator {
-    width: calc(100% + 100px);
-    height: 1px;
-    background-color: $light-green-primary;
-    margin-left: -50px;
-  }
-
-  @media (max-width: 710px) {
-    padding-left: 15px;
-    padding-right: 15px;
-
-    .div-form-header {
-      margin: -50px -15px 0 -15px;
-      height: 80px;
-      line-height: 80px;
-      border-bottom: unset;
-      font-size: $regular-font-size;
-      font-family: 'Montserrat-Regular';
-      color: $text-primary;
-    }
-
-    .form-inputs {
-      margin-top: 30px;
-      
-      .form-input {
-        margin-top: 15px;
-        font-size: $mobile-regular-font-size;
+  display: flex;
+  justify-content: center;
   
-        input {
-          height: 50px;
-          font-size: $mobile-regular-font-size;
-          padding: 20px 15px;
-        }
-      }
+  .div-profile-info {
+    color: $text-light-gray;
+    display: flex;
+    margin-right: 100px;
 
-      .form-double-inputs {
-        #input_firstname {
-          margin-right: 5px;
-        }
-        #input_lastname {
-          margin-left: 5px;
-        }
+    .div-profile-info-title-list {
+      margin-right: 240px;
+      .div-profile-info-title {
+        margin-bottom: 50px;
+        text-align: right;
       }
+    }
+    .div-profile-info-text-list {
+      .div-profile-info-text {
+        margin-bottom: 50px;
+      }
+    }
+  }
 
-      .form-separator {
-        width: calc(100% + 30px);
-        margin-left: -15px;
-      }
+  .div-profile-edit {
+    .img-profile-edit {
+      height: 32px;
     }
   }
 }
