--- a/front-end/src/styles/_custom.scss
+++ b/front-end/src/styles/_custom.scss
@@ -62,6 +62,25 @@ input, textarea {
   margin-right: 0;
 }
 
-// ::-webkit-scrollbar {
-//   width: 0px;
-// }
+// Override rc-rate styles
+.rc-rate-star {
+  outline: none;
+  .img-star {
+    width: 32px;
+    height: 32px;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
+
+.rc-rate-star-full {
+  .img-star {
+    background-image: url('../assets/images/star_full.svg');
+  }
+}
+
+.rc-rate-star-zero {
+  .img-star {
+    background-image: url('../assets/images/star_empty.svg');
+  }
+}
