[FE] project structure refactoring

--- a/front-end/src/containers/Modals/CardInfoModal/styles.scss
+++ b/front-end/src/containers/Modals/CardInfoModal/styles.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables/variables";
+@import "../../../styles/variables/variables";
 
 .card-info-modal {
   position: absolute;
