--- a/front-end/src/containers/Modals/EditProfileModal/styles.scss
+++ b/front-end/src/containers/Modals/EditProfileModal/styles.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables/variables";
+@import "../../../styles/variables/variables";
 
 .edit-profile-modal {
   position: absolute;
