--- a/front-end/src/containers/Modals/MenuModal/component/IncrementCounter/styles.scss
+++ b/front-end/src/containers/Modals/MenuModal/component/IncrementCounter/styles.scss
@@ -1,4 +1,4 @@
-@import "../../../../styles/variables/variables";
+@import "../../../../../styles/variables/variables";
 
 $increment-color: #D3D3D3;
 
