--- a/front-end/src/containers/Modals/MenuModal/styles.scss
+++ b/front-end/src/containers/Modals/MenuModal/styles.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables/variables";
+@import "../../../styles/variables/variables";
 
 .div-menu-modal-center {
   background-color: white;
