--- a/front-end/src/containers/Modals/ComboSliceModal/component/RequiredComboChoice/styles.scss
+++ b/front-end/src/containers/Modals/ComboSliceModal/component/RequiredComboChoice/styles.scss
@@ -1,4 +1,4 @@
-@import "../../../../styles/variables/variables";
+@import "../../../../../styles/variables/variables";
 
 .div-required-combo-container {
   padding: 25px;
