--- a/front-end/src/containers/Modals/ComboSliceModal/styles.scss
+++ b/front-end/src/containers/Modals/ComboSliceModal/styles.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables/variables";
+@import "../../../styles/variables/variables";
 
 .div-combo-slice-modal-center {
   display: flex;
