--- a/front-end/src/containers/Modals/MenuModal/component/ExpandableDescription/styles.scss
+++ b/front-end/src/containers/Modals/MenuModal/component/ExpandableDescription/styles.scss
@@ -1,4 +1,4 @@
-@import "../../../../styles/variables/variables";
+@import "../../../../../styles/variables/variables";
 
 .div-description-text {
   opacity: 0.58;
