--- a/front-end/src/containers/Modals/MenuModal/component/MenuThumbnailList/styles.scss
+++ b/front-end/src/containers/Modals/MenuModal/component/MenuThumbnailList/styles.scss
@@ -1,4 +1,4 @@
-@import "../../../../styles/variables/variables";
+@import "../../../../../styles/variables/variables";
 
 $thumbnail-size: 77px;
 $mobile-thumbnail-size: 36px;
