--- a/front-end/src/containers/Modals/OrderFeedbackModal/styles.scss
+++ b/front-end/src/containers/Modals/OrderFeedbackModal/styles.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables/variables";
+@import "../../../styles/variables/variables";
 
 .order-feedback-modal {
   position: absolute;
