[FE] career page (first page)

--- a/front-end/src/containers/Root/components/DropdownFooter/components/DropdownList/styles.scss
+++ b/front-end/src/containers/Root/components/DropdownFooter/components/DropdownList/styles.scss
@@ -35,11 +35,9 @@
     animation-duration: 0.25s;
     transform-origin: left top;
 
-    div {
+    a {
       padding-top: 10px;
-    }
-    div:hover {
-      color: white;
+      color: $text-light-gray;
     }
   }
 }
