[FE] career page routing.  job position page.

--- a/front-end/src/containers/Career/CareerList/styles.scss
+++ b/front-end/src/containers/Career/CareerList/styles.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables/variables";
+@import "../../../styles/variables/variables";
 
 .div-career-container {
   background-color: $extra-light-gray;
