[FE] job page and apply modals

--- a/front-end/src/styles/variables/_colors.scss
+++ b/front-end/src/styles/variables/_colors.scss
@@ -19,3 +19,4 @@ $bg-footer-secondary: #212122;
 $border-gray: #E3E3E3;
 
 $bg-modal: rgba(255, 255, 255, 0.44);
+$dark-bg-modal: rgba(0, 0, 0, 0.36);
