--- a/front-end/src/containers/Checkout/components/OrderedItem/styles.scss
+++ b/front-end/src/containers/Checkout/components/OrderedItem/styles.scss
@@ -10,6 +10,7 @@ $ordered-item-size: 120px;
     width: $ordered-item-size;
     height: $ordered-item-size;
     border: 1px solid $border-gray;
+    flex-shrink: 0;
   }
 
   .ordered-item-info {
