--- a/front-end/src/containers/Menus/components/MenuFilter/styles.scss
+++ b/front-end/src/containers/Menus/components/MenuFilter/styles.scss
@@ -60,4 +60,11 @@
       margin-right: 20px;
     }
   }
+
+  @media (max-width: 710px) {
+    .dropdown__trigger .menu-filter-dropdown-trigger .div-filter {
+      width: 46px;
+      height: 31px;
+    }
+  }
 }
