[FE]  home page broken style fix.   menus page/sidebar responsive complete.   Other style fixes.

--- a/front-end/src/components/Cart/styles.scss
+++ b/front-end/src/components/Cart/styles.scss
@@ -40,4 +40,17 @@
   span {
     color: white;
   }
+
+  @media (max-width: 414px) {
+    padding: 10px 20px;
+    border-radius: 8px;
+
+    img {
+      height: 13px;
+    }
+
+    span {
+      font-size: 11px;
+    }
+  }
 }
