--- a/front-end/src/containers/Home/components/HowItWorks/styles.scss
+++ b/front-end/src/containers/Home/components/HowItWorks/styles.scss
@@ -46,7 +46,7 @@
 .img-how-it-works {
   position: absolute;
   top: 50%;
-  // left: 50%;
+  left: 50%;
   transform: translateX(-50%) translateY(-50%);
   max-height: 800px;
   max-width: 90%;
