--- a/front-end/src/containers/Menus/components/MenuFilter/styles.scss
+++ b/front-end/src/containers/Menus/components/MenuFilter/styles.scss
@@ -24,7 +24,7 @@
     width: 225px;
     height: 436px;
     margin-left: -40px;
-    padding: 30px 2px 0 7px;;
+    padding: 30px 2px 0 7px;
     animation-name: dropdown-animation;
     animation-duration: 0.5s;
     transform-origin: left top;
@@ -65,6 +65,31 @@
     .dropdown__trigger .menu-filter-dropdown-trigger .div-filter {
       width: 46px;
       height: 31px;
+    }
+
+    .dropdown__content {
+      margin-left: -20px;
+    }
+  }
+
+  @media (max-width: 414px) {
+    .dropdown__content {
+      width: 160px;
+      height: 309px;
+      margin-left: -12px;
+      padding-top: 20px;
+
+      .div-menu {
+        height: 37px;
+        font-size: 12px;
+        padding-left: 10px;
+        padding-right: 20px;
+      }
+
+      .div-menu-clear {
+        font-size: 12px;
+        margin-top: 10px;
+      }
     }
   }
 }
