[FE] disable paypal in checkout.

--- a/front-end/src/containers/Checkout/styles.scss
+++ b/front-end/src/containers/Checkout/styles.scss
@@ -203,6 +203,7 @@ $page-padding: 110px;
           margin-top: 30px;
           margin-bottom: 30px;
           padding: 24px;
+          opacity: 0.5;
 
           .div-checkout-payment-paypal-instruction {
             font-size: $footer-primary-font-size;
