--- a/front-end/src/containers/Root/components/Footer/styles.scss
+++ b/front-end/src/containers/Root/components/Footer/styles.scss
@@ -33,10 +33,16 @@
         margin: 60px 0 0 69px;
       }
 
-      @media (max-width: 1440px) {
+      @media (max-width: 1700px) {
+        margin-top: -20px;
+      }
+
+      @media (max-width: 1510px) {
         margin-right: 20px;
+        margin-top: -30px;
         img {
           margin-left: 30px;
+          height: 40px;
         }
       }
     }
@@ -77,11 +83,15 @@
         }
       }
 
-      @media (max-width: 1440px) {
+      @media (max-width: 1700px) {
         margin: 30px 50px 0 50px;
       }
 
-      @media (max-width: 1200px) {
+      @media (max-width: 1510px) {
+        margin: 30px 40px 0 40px;
+      }
+
+      @media (max-width: 1300px) {
         margin: 20px 25px 0 25px;
       }
     }
