--- a/front-end/src/containers/Checkout/styles.scss
+++ b/front-end/src/containers/Checkout/styles.scss
@@ -240,7 +240,7 @@ $page-padding: 110px;
   }
 
   .div-help-container {
-    padding: 50px 0 150px 0;
+    padding: 100px 0;
     text-align: center;
 
     span {
