[FE] styling fix in safari

--- a/front-end/src/containers/Menus/components/MenusHeader/styles.scss
+++ b/front-end/src/containers/Menus/components/MenusHeader/styles.scss
@@ -54,6 +54,7 @@
       border: 1px solid #54595480;
 
       input {
+        width: 100%;
         flex-grow: 1;
         font-size: $small-font-size;
         color: #545954;
