--- a/front-end/src/containers/Root/components/Header/styles.scss
+++ b/front-end/src/containers/Root/components/Header/styles.scss
@@ -66,6 +66,10 @@
     .div-cart {
       margin-left: 30px;
     }
+
+    .btn-order-now {
+      margin-right: 20px;
+    }
   }
 
   @media (max-width: 1600px) {
