[FE] various fixes. - style updates. logic change

--- a/front-end/src/containers/Home/styles.scss
+++ b/front-end/src/containers/Home/styles.scss
@@ -9,9 +9,7 @@
 
   .div-banner-container {
     position: relative;
-    
-    height: calc(100vh - 60px);
-    min-height: 450px;
+    height: 720px;
 
     .div-banner-center {
       position: absolute;
