--- a/front-end/src/containers/Menus/components/MenuFilter/styles.scss
+++ b/front-end/src/containers/Menus/components/MenuFilter/styles.scss
@@ -3,16 +3,16 @@
 .menu-filter {
   .dropdown__trigger {
     .menu-filter-dropdown-trigger {
-      .div-filter {
+      .img-filter {
         width: 69px;
         height: 37px;
-        background-image: url('../../../../assets/images/filter_button.svg');
-        background-repeat: no-repeat;
-        background-position: center;
+        // background-image: url('../../../../assets/images/filter_button.svg');
+        // background-repeat: no-repeat;
+        // background-position: center;
         
-        &:active {
-          background-image: url('../../../../assets/images/filter_button_highlight.svg');
-        }
+        // &:active {
+        //   background-image: url('../../../../assets/images/filter_button_highlight.svg');
+        // }
       }
     }
   }
