--- a/front-end/src/containers/Root/components/Footer/components/FooterLanguageButton/styles.scss
+++ b/front-end/src/containers/Root/components/Footer/components/FooterLanguageButton/styles.scss
@@ -1,27 +1,67 @@
-.div-footer-language-button-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+@import "../../../../../../styles/variables/variables";
 
-  img {
-    height: 29px;
-    margin-right: 60px;
-
-    @media (max-width: 1440px) {
-      margin-right: 30px;
+.language-dropdown {
+  .div-footer-language-button-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 370px;
+    height: 100%;
+  
+    img {
+      height: 29px;
+      margin-right: 60px;
+  
+      @media (max-width: 1440px) {
+        margin-right: 30px;
+      }
+  
+      @media (max-width: 1200px) {
+        margin-left: 30px;
+      }
     }
-
-    @media (max-width: 1200px) {
-      margin-left: 30px;
+  
+    span {
+      color: #AFAFAF;
+      margin: 0 50px;
+  
+      @media (max-width: 1200px) {
+        display: none;
+      }
     }
   }
 
-  span {
+  .dropdown__content {
+    width: 100%;
+    background-color: #212122;
     color: #AFAFAF;
-    margin: 0 50px;
 
-    @media (max-width: 1200px) {
-      display: none;
+    .main-language-menu {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      height: 60px;
+      padding: 0 50px;
+      cursor: pointer;
+
+      img {
+        height: 24px;
+      }
+    }
+
+    .sub-language-menus {
+      background-color: #2D2D2D;
+      padding-top: 10px;
+
+      .sub-language-menu {
+        display: flex;
+        align-items: center;
+        height: 40px;
+        padding-left: 70px;
+        cursor: pointer;
+        font-size: $small-font-size;
+      }
     }
   }
 }
