--- a/front-end/src/containers/HowItWorks/styles.scss
+++ b/front-end/src/containers/HowItWorks/styles.scss
@@ -4,67 +4,42 @@
 
   .div-meal-plans-banner {
     position: relative;
-    background: url('../../assets/images/banner.png') no-repeat center/cover;
+    background-image: linear-gradient(to bottom, #F2FFF3, white);
     height: 465px;
 
     .div-meal-plans-title {
       position: relative;
       max-width: 600px;
-      text-align: left;
-      font-size: 40px;
+      text-align: center;
+      font-size: 28px;
       font-family: 'Montserrat-SemiBold';
+      color: #5D5D5D;
       left: 50%;
-      top: calc(50% + 30px);
-      transform: translate(-50%, -50%);
+      top: 50px;
+      transform: translate(-50%);
     }
-  }
 
-  .div-meal-plans-grey-space {
-    background-color: #EBECF1;
-    height: 170px;
+    .div-meal-plans-subtitle {
+      position: relative;
+      max-width: 700px;
+      text-align: center;
+      font-size: $mobile-regular-font-size;
+      color: $text-light-gray;
+      left: 50%;
+      top: 60px;
+      transform: translate(-50%);
+    }
   }
 
   .div-meal-plans {
     position: relative;
     display: flex;
-    margin-top: -150px;
+    margin-top: -330px;
 
     .div-meal-plans-grid {
-      max-width: calc(100% - 280px);
-
-      .div-zip-code-wrapper {
-        display: flex;
-        align-items: center;
-        padding: 0 45px;
-        margin-bottom: -40px;
-        
-        .div-separator {
-          flex-grow: 1;
-          height: 1px;
-          background-color: #3A3A3A;
-        }
-
-        .div-zip-code {
-          display: flex;
-          align-items: center;
-          margin-left: 40px;
-          margin-right: 200px;
-
-          img {
-            height: 32px;
-          }
-          .div-zip-code-description {
-            font-family: 'Montserrat-Bold';
-          }
-
-          @media (max-width: 1440px) {
-            margin-right: 0;
-          }
-        }
-      }
-
+      max-width: calc(950px);
       .div-meal-plan-wrapper {
-        padding: 70px 45px;
+        padding: 70px 40px;
 
         @media (max-width: 1400px) {
           padding-left: 30px;
@@ -126,9 +101,11 @@
 
       .div-meal-plans-title {
         font-size: $regular-font-size;
-        top: 50%;
-        text-align: center;
         padding: 0 20px;
+      }
+
+      .div-meal-plans-subtitle {
+        padding: 0 40px;
       }
     }
 
@@ -137,18 +114,9 @@
     }
 
     .div-meal-plans {
-      margin-top: -90px;
+      margin-top: -220px;
 
       .container {
-        .div-zip-code-wrapper {
-          padding: 0 20px;
-          font-size: $mobile-regular-font-size;
-
-          .div-zip-code {
-            margin-left: 10px;
-          }
-        }
-
         .div-meal-plan-wrapper {
           padding: 15px;
           margin-top: 40px;
@@ -158,6 +126,18 @@
 
     .quote-container {
       display: none;
+    }
+  }
+
+  @media (max-width: 414px) {
+    .div-meal-plans-banner {
+      .div-meal-plans-subtitle {
+        font-size: $mobile-small-font-size;
+      }
+    }
+
+    .div-meal-plans {
+      margin-top: -260px;
     }
   }
 }
