--- a/front-end/src/containers/Root/components/Footer/components/FooterLanguageButton/styles.scss
+++ b/front-end/src/containers/Root/components/Footer/components/FooterLanguageButton/styles.scss
@@ -9,9 +9,13 @@
     width: 370px;
     height: 100%;
   
-    img {
+    .img-globe {
+      width: 29px;
       height: 29px;
       margin-right: 60px;
+      background-image: url('../../../../../../assets/images/globe.svg');
+      background-position: center;
+      background-repeat: no-repeat;
   
       @media (max-width: 1440px) {
         margin-right: 30px;
@@ -28,6 +32,16 @@
   
       @media (max-width: 1200px) {
         display: none;
+      }
+    }
+
+    &:hover {
+      span {
+        color: $green-primary;
+      }
+
+      .img-globe {
+        background-image: url('../../../../../../assets/images/globe_green.svg');
       }
     }
   }
@@ -48,6 +62,10 @@
       img {
         height: 24px;
       }
+
+      &:hover {
+        background-color: $text-light-gray;
+      }
     }
 
     .sub-language-menus {
@@ -61,6 +79,10 @@
         padding-left: 70px;
         cursor: pointer;
         font-size: $small-font-size;
+
+        &:hover {
+          background-color: $text-light-gray;
+        }
       }
     }
   }
